--- a/Advent_of_Code_2021.csproj
+++ b/Advent_of_Code_2021.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DayOne.cs" />
+    <Compile Include="DayThree.cs" />
     <Compile Include="DayTwo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
