--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,7 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/settings.json
+inputs/config.json
